# logger

./: .gitignore  CMakeLists.txt  README.md  logger.hpp  main.cpp
examples/: main.cpp
include/: logger.h
src/: logger.cpp
